[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "image-keygen-crypto"
version = "0.1.0"
description = "Prototype toolkit to generate varied images and derive cryptographic keys from image-derived entropy."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "Your Name", email = "you@example.com" }
]
keywords = ["entropy", "image", "crypto", "kdf", "hkdf", "argon2"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Topic :: Security :: Cryptography",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Operating System :: OS Independent"
]
urls = { "Homepage" = "https://github.com/your-org/image-keygen-crypto", "Repository" = "https://github.com/your-org/image-keygen-crypto" }

dependencies = [
  "Pillow>=9.0.0",
  "cryptography>=40.0.0",
  "argon2-cffi>=23.0.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=7.0",
  "black>=24.0",
  "ruff>=0.0.0",
  "flake8>=6.0",
  "pre-commit>=3.0",
  "pip-audit>=2.0"
]

[project.scripts]
image-keygen = "image_keygen.__main__:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["image_keygen*"]
